fix: change title color in dark mode.

--- a/theme/components/PostList/index.module.scss
+++ b/theme/components/PostList/index.module.scss
@@ -16,7 +16,7 @@
 
   .postHeader {
     .postTitle {
-      color: var(--rp-c-text-code);
+      color: var(--rp-c-text-1);
       transition: color 0.5s;
       word-break: break-all;
 
